responsiveness issues with scrollbar fixed

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,6 +25,7 @@
   --white: #fad9d1;
   --main-font: "Niveau";
   --search-width: 80%;
+  
 }
 
 body {
@@ -34,6 +35,7 @@ body {
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 10% 1fr;
   font-family: Niveau;
+  overflow-x: hidden;
 }
 
 #myHeader {
@@ -155,6 +157,10 @@ i {
   border: 0;
 }
 
+#leftMenu:hover {
+  background: var(--lightRed);
+}
+
 #leftMenu i {
   margin-left: 0px;
 }
@@ -221,8 +227,9 @@ i {
 }
 
 .navigationPanelProjects:hover {
-  background-color: var(--lightRed);
+  background: var(--lightRed);
 }
+
 
 #projectsDiv {
   justify-content: space-between;
@@ -252,6 +259,10 @@ i {
   .leftNavTransformed {
     transform: translate(-101%, 0px);
     z-index: -1;
+  }
+  #projectInfo {
+    margin-left: 10px;
+    margin-right: 10px;
   }
   #welcomeLayout {
     grid-template-columns: 1fr;
@@ -323,7 +334,7 @@ i {
   }
   #tasksLayout {
     grid-template-columns: 100vw;
-    grid-template-rows: 200px 2fr 600px 50px;
+    grid-template-rows: 250px 2fr 600px 50px;
     height: 100%;
     overflow: hidden;
   }
